# platform.upstream.dnsmasq

./: CMakeLists.txt  VERSION  project.config
dbus/: dnsmasq.conf
debian/: changelog  control  rules
packaging/: dnsmasq.spec
src/: config.h  dbus.c  dnsmasq.h  rfc2131.c
